@@ -2,18 +2,28 @@ package com.openclassrooms.tourguide;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.when;
 
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
 
 import gpsUtil.location.Location;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import gpsUtil.GpsUtil;
 import gpsUtil.location.Attraction;
 import gpsUtil.location.VisitedLocation;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 import rewardCentral.RewardCentral;
 import com.openclassrooms.tourguide.helper.InternalTestHelper;
 import com.openclassrooms.tourguide.service.RewardsService;
@@ -21,30 +31,62 @@ import com.openclassrooms.tourguide.service.TourGuideService;
 import com.openclassrooms.tourguide.user.User;
 import com.openclassrooms.tourguide.user.UserReward;
 
+@ExtendWith(MockitoExtension.class)
 public class TestRewardsService {
+
+	@Mock
+	private GpsUtil gpsUtil;
+	@Mock
+	private RewardCentral rewardCentral;
+	@InjectMocks
+	private RewardsService rewardsService;
+
+	private User user;
+	private List<Attraction> attractions;
+
+	@BeforeEach
+	public void setup() {
+		MockitoAnnotations.openMocks(this);
+
+		user = new User(UUID.randomUUID(), "jon", "000", "jon@tourGuide.com");
+		attractions = List.of(
+				new Attraction("Eiffel Tower", "Paris", "FR", 48.8584, 2.2945),
+				new Attraction("Louvre Museum", "Paris", "FR", 48.8606, 2.3376),
+				new Attraction("Notre-Dame", "Paris", "FR", 48.8530, 2.3499),
+				new Attraction("Arc de Triomphe", "Paris", "FR", 48.8738, 2.2950),
+				new Attraction("Montmartre", "Paris", "FR", 48.8867, 2.3431));
+
+		rewardsService = new RewardsService(gpsUtil, rewardCentral);
+		lenient().when(gpsUtil.getAttractions()).thenReturn(attractions);
+		lenient().when(rewardCentral.getAttractionRewardPoints(any(), any())).thenReturn(500);
+	}
 
 	@Test
 	public void userGetRewards() {
-		GpsUtil gpsUtil = new GpsUtil();
-		RewardsService rewardsService = new RewardsService(gpsUtil, new RewardCentral());
-
 		InternalTestHelper.setInternalUserNumber(0);
 		TourGuideService tourGuideService = new TourGuideService(gpsUtil, rewardsService);
 
-		User user = new User(UUID.randomUUID(), "jon", "000", "jon@tourGuide.com");
-		Attraction attraction = gpsUtil.getAttractions().get(0);
+		// location
+		Location mockedLocation = new Location(10.0, 10.0);
+		VisitedLocation mockedVisit = new VisitedLocation(user.getUserId(), mockedLocation, new Date());
+		when(gpsUtil.getUserLocation(user.getUserId())).thenReturn(mockedVisit);
+
+		// attraction
+		Attraction attraction = attractions.getFirst();
 		user.addToVisitedLocations(new VisitedLocation(user.getUserId(), attraction, new Date()));
+
+		// act
 		tourGuideService.trackUserLocation(user);
+
 		List<UserReward> userRewards = user.getUserRewards();
+
 		tourGuideService.tracker.stopTracking();
-		assertTrue(userRewards.size() == 1);
+        assertEquals(1, userRewards.size());
 	}
 
 	@Test
 	public void isWithinAttractionProximity() {
-		GpsUtil gpsUtil = new GpsUtil();
-		RewardsService rewardsService = new RewardsService(gpsUtil, new RewardCentral());
-		Attraction attraction = gpsUtil.getAttractions().get(0);
+		Attraction attraction = attractions.getFirst();
 		assertTrue(rewardsService.isWithinAttractionProximity(attraction, attraction));
 	}
 
@@ -56,25 +98,23 @@ public class TestRewardsService {
 	@Test
 	public void nearAllAttractions() {
 		// Arrange ___
-		GpsUtil gpsUtil = new GpsUtil();
-		RewardsService rewardsService = new RewardsService(gpsUtil, new RewardCentral());
-		List<Attraction> attractions = gpsUtil.getAttractions();
-
 		// Sets proximity to MAX, so the user is near EVERY attraction
 		rewardsService.setProximityBuffer(Integer.MAX_VALUE);
 		// Sets the test to simulate 1 user
 		InternalTestHelper.setInternalUserNumber(1);
 		TourGuideService tourGuideService = new TourGuideService(gpsUtil, rewardsService);
-		User user = tourGuideService.getAllUsers().get(0);
+		tourGuideService.addUser(user);
 
 		// Act ___
 		// Add a visited location at each attraction location
 		for (Attraction attraction : attractions) {
-			VisitedLocation visited = new VisitedLocation(
-					user.getUserId(),
-					new Location(attraction.latitude, attraction.longitude),
-					new Date());
-			user.addToVisitedLocations(visited);
+			if (attraction != null) {
+				VisitedLocation visited = new VisitedLocation(
+						user.getUserId(),
+						new Location(attraction.latitude, attraction.longitude),
+						new Date());
+				user.addToVisitedLocations(visited);
+			}
 		}
 		// Retrieve a list of user's rewards and stop tracker thread
 		rewardsService.calculateRewards(user);
